--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -6,7 +6,7 @@
     <meta content="{{ csrf_token() }}" name="csrf-token" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>suez</title>
+    <title>{{name}}</title>
     <link rel="stylesheet" href="/static/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/assets/css/Navigation-with-Button.css">
     <link rel="stylesheet" href="/static/assets/css/styles.css">
@@ -16,14 +16,22 @@
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 
+    <link
+            href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.5.min.css"
+            rel="stylesheet" type="text/css">
+    <link
+            href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.5.min.css"
+            rel="stylesheet" type="text/css">
 
+    <script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.5.min.js"></script>
+    <script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.5.min.js"></script>
 </head>
 
 <body>
 <div>
     <nav class="navbar navbar-default navigation-clean-button">
         <div class="container">
-            <div class="navbar-header"><a class="navbar-brand" href="#">Company Name</a>
+            <div class="navbar-header"><a class="navbar-brand" href="#">{{name}}</a>
                 <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span
                         class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
                         class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -41,6 +49,7 @@
                 <button class="btn btn-danger navbar-btn" type="button" disabled="disabled" id="delete"
                         data-toggle="modal" data-target="#modal1">DELETE
                 </button>
+                <a class="btn btn-info navbar-btn" role="button" href="{{url_for('main.download')}}">DOWNLOAD</a>
             </div>
         </div>
     </nav>
@@ -79,7 +88,7 @@
         <thead>
         <tr>
             {% for row in headers %}
-            <th>{{row}}</th>
+                <th>{{row}}</th>
             {%endfor%}
 
 
@@ -87,28 +96,31 @@
         </thead>
         <tbody>
 
-        <tr>
-            <td>Tiger Nixon</td>
-
-            <td>Tiger Nixon</td>
-            <td>System Architect</td>
-            <td>Edinburgh</td>
-            <td>61</td>
-            <td>2011/04/25</td>
-            <td>$320,800</td>
-        </tr>
 
         </tbody>
         <tfoot>
         <tr>
             {% for row in headers %}
-            <th>{{row}}</th>
+                <th>{{row}}</th>
             {%endfor%}
         </tr>
         </tfoot>
     </table>
 </div>
 
+<div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="text-center">
+                    <h1>Count Missing Values per Column.</h1>                
+                    {{ script|safe }}
+                    {{ div|safe }}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="modal fade" role="dialog" tabindex="-1" id="main_modal">
     <div class="modal-dialog" role="document">
@@ -184,130 +196,8 @@
 
 <!-- <script src="https://code.jquery.com/jquery-3.3.1.js" type="text/javascript"></script> -->
 
-<script type="text/javascript">
+<script src="/static/js/datatables_flask.js" model={{model|safe}}></script>
 
-
-$(document).ready(function() {
-    table = $('#example').DataTable({
-            "ajax":{
-
-            "url": "/get_data",
-            "dataSrc" :"items"}
-    });
-
-
-var csrftoken = $('meta[name=csrf-token]').attr('content')
-
-$.ajaxSetup({
-    beforeSend: function(xhr, settings) {
-        if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type)) {
-            xhr.setRequestHeader("X-CSRFToken", csrftoken)
-            //console.log(csrftoken);
-        }
-    }
-})
-
-$('#example tbody').on( 'click', 'tr', function () {
-
-//console.log('Clicking on row.');
-
-if ( $(this).hasClass('selected') ) {
-    //console.log('Unselecting');
-    $(this).removeClass('selected');
-    $('#add').prop('disabled', false);
-    $('#modify').prop('disabled', true);
-    $('#delete').prop('disabled', true);
-   
-    var myURL = document.location.origin;
-    var new_url = myURL.substring(0, myURL.indexOf('?'));
-    window.history.pushState("object or string", "Title", myURL );
-
-}
-else {
-    // this line unselects the previous one. Find a way to take care of them.
-    table.$('tr.selected').removeClass('selected');
-    console.log('Selecting');
-    $(this).addClass('selected');
-    var myURL = document.location.origin;
-    var new_url = myURL.substring(0, myURL.indexOf('?'));
-    window.history.pushState("object or string", "Title", myURL );
-    $('#add').prop('disabled', false); /// true
-    $('#modify').prop('disabled', false);
-    $('#delete').prop('disabled', false);
-    id = table.row('.selected').data()[0];
-
-    var myURL = document.location;
-    var new_url = myURL + "?project_id="+id;
-    window.history.pushState("object or string", "Title", new_url );
-
-    row_data = table.row('.selected').data();
-    console.log(row_data);
-    document.getElementById("project_title").value = row_data[1];
-    document.getElementById("year_1").value = row_data[2];
-    document.getElementById("year_2").value = row_data[3];
-    document.getElementById("year_3").value = row_data[4];
-    document.getElementById("year_4").value = row_data[5];
-    document.getElementById("year_5").value = row_data[6];
-    document.getElementById("justification").value = row_data[7];
-    document.getElementById("comments").value = row_data[8];
-}
-});
-
-
-
-
-$('#delete').click( function () {
-
-    id = table.row('.selected').data()[0];
-    console.log(id);
-    var choice = window.confirm("Are you sure you want to delete this item?");
-    var myURL = document.location.origin;
-    var new_url = myURL.substring(0, myURL.indexOf('?'));
-
-    if (choice==true){
-        table.row('.selected').remove().draw( false );
-
-        $.ajax({
-        type: 'DELETE',
-        url: new_url + "/delete_data/"+id,
-        data:{"deleting":id},
-        success: function(data){
-            table.row('.selected').remove().draw( false );
-            //document.getElementById("add_item").disabled = false;
-            //document.getElementById("edit_item").disabled = true;
-            //document.getElementById("delete_row").disabled = true;
-
-        },
-        error: function (xhr, statusText, err) {
-          alert("error"+xhr.status);
-        }
-    });}
-
-    else{}
-
-
-});
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-} );
-
-
-
-
-
-</script>
 
 </body>
 
