--- a/app/templates/main/email.html
+++ b/app/templates/main/email.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta content="{{ csrf_token() }}" name="csrf-token" />
+    <meta content="{{ csrf_token() }}" name="csrf-token"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{name}}</title>
@@ -31,22 +31,41 @@
 
 <body>
 <div>
-        <nav class="navbar navbar-default navigation-clean-button">
-                <div class="container">
-                    <div class="navbar-header"><a class="navbar-brand" href="#">{{name|safe}}</a><button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
-                    <div
-                        class="collapse navbar-collapse" id="navcol-1">
-                        <ul class="nav navbar-nav"></ul><button class="btn btn-success navbar-btn" type="button" id="add" data-toggle="modal" data-target="#email_modal">ADD</button><button class="btn btn-warning navbar-btn" type="button" disabled="disabled" id="modify" data-toggle="modal"
-                            data-target="#email_modal">MODIFY</button><button class="btn btn-danger navbar-btn" type="button" disabled="disabled" id="delete" data-toggle="modal" data-target="#modal1">DELETE</button><button class="btn btn-default navbar-btn" type="button"
-                            id="generate_tokens">GENERATE TOKENS</button><button id="email_everyone",class="btn btn-default navbar-btn" type="button">EMAIL EVERYONE</button></div>
+    <nav class="navbar navbar-default navigation-clean-button">
+        <div class="container">
+            <div class="navbar-header"><a class="navbar-brand" href="#">{{name|safe}}</a>
+                <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span
+                        class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
+                        class="icon-bar"></span><span class="icon-bar"></span></button>
+            </div>
+            <div
+                    class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav"></ul>
+                <button class="btn btn-success navbar-btn" type="button" id="add" data-toggle="modal"
+                        data-target="#email_modal">ADD
+                </button>
+                <button class="btn btn-warning navbar-btn" type="button" disabled="disabled" id="modify"
+                        data-toggle="modal"
+                        data-target="#email_modal">MODIFY
+                </button>
+                <button class="btn btn-danger navbar-btn" type="button" disabled="disabled" id="delete"
+                        data-toggle="modal" data-target="#modal1">DELETE
+                </button>
+                <button class="btn btn-default navbar-btn" type="button"
+                        id="generate_tokens">GENERATE TOKENS
+                </button>
+                <button id="email_everyone" ,class="btn btn-default navbar-btn" type="button">EMAIL EVERYONE</button>
+            </div>
         </div>
-        </nav>
+    </nav>
 </div>
 <div class="text-center">
     <div class="progress">
-        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+             aria-valuemax="100" style="width: 0%">
             <span class="progress-bar-label">0%</span>
-        </div>    </div>
+        </div>
+    </div>
 </div>
 
 <div class="container">
@@ -63,6 +82,7 @@
 
 
 
+
     </style>
 
 
@@ -77,8 +97,9 @@
 
 
 
+
     </style>
- 
+
     <!-- <div class="progress" style="width: 50%; margin: 50px;">
             <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
                 <span class="progress-bar-label">0%</span>
@@ -89,7 +110,7 @@
         <thead>
         <tr>
             {% for row in headers %}
-                <th>{{row}}</th>
+            <th>{{row}}</th>
             {%endfor%}
 
 
@@ -102,7 +123,7 @@
         <tfoot>
         <tr>
             {% for row in headers %}
-                <th>{{row}}</th>
+            <th>{{row}}</th>
             {%endfor%}
         </tr>
         </tfoot>
@@ -110,29 +131,32 @@
 </div>
 
 
-
 <div class="modal fade" role="dialog" tabindex="-1" id="email_modal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">×</span></button>
                 <h4 class="modal-title">PROJECT INFORMATION</h4>
             </div>
             <div class="modal-body">
                 <p>Please fill out the information bellow.</p>
                 <form method="post">
-                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 
                     <div class="form-group">
                         <div class="text-center"><label class="control-label">First Name</label></div>
                     </div>
                     <div class="form-group">
-                        <div class="text-center"><input class="form-control" type="text" name="first_name" id="first_name"></div>
+                        <div class="text-center"><input class="form-control" type="text" name="first_name"
+                                                        id="first_name"></div>
                     </div>
                     <div class="form-group">
                         <div class="text-center"><label class="control-label">Last Name</label></div>
                     </div>
                     <div class="form-group">
-                        <div class="text-center"><input class="form-control" type="text" name="last_name" id="last_name"></div>
+                        <div class="text-center"><input class="form-control" type="text" name="last_name"
+                                                        id="last_name"></div>
                     </div>
                     <div class="form-group">
                         <div class="text-center"><label class="control-label">Email Adress</label></div>
@@ -140,7 +164,10 @@
                     <div class="form-group">
                         <div class="text-center"><input class="form-control" type="text" name="email" id="email"></div>
                     </div>
-                    <div class="modal-footer"><button class="btn btn-default" type="button" data-dismiss="modal">Close</button><button class="btn btn-primary" type="submit">Submit</button></div>
+                    <div class="modal-footer">
+                        <button class="btn btn-default" type="button" data-dismiss="modal">Close</button>
+                        <button class="btn btn-primary" type="submit">Submit</button>
+                    </div>
 
                 </form>
             </div>
@@ -152,8 +179,9 @@
 <script type="text/javascript">
     var params = {{ params|safe }};
     var model = {{ model|safe }};
+
 </script>
-<script src="/static/js/datatables_flask.js" model = {{ model|safe }}></script>
+<script src="/static/js/datatables_flask.js" model={{ model|safe }}></script>
 
 <script type="text/javascript">
     $(document).ready(function() {
@@ -223,6 +251,7 @@
     
     
     } );
+
 
 </script>
 
